# latit_space

./: .gitignore  .gitlab-ci.yml  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: pypi.yml
data/: pilot_metadata.csv
doc/: api.rst  conf.py  index.rst
latit_space/: __main__.py
notebooks/: BirdNET.ipynb  VAE.ipynb  VAE_pytorch.ipynb  analyse_filtered.ipynb  data_splitter.ipynb  demo.ipynb  frequency.ipynb  to_filtered_spectrogram.ipynb  vae.ipynb
tests/: test_cli.py  test_latit_space.py
